Lazy commit message is lazy - various tweaks to styles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Sirius by Comcast
 
 </div><!-- closing div from header.html for background-->
 
-<section class="module featured-content global-padding">
+<section class="module featured-content global-padding hack">
 
   <ul class="tiles">
     <li>
