Changing download button to view on github to support more common use case

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Sirius by Comcast
     to important reference data: small, read-only datasets with relatively small update rates. As RAM sizes in servers continue their upward climb, more and more of these datasets will fit in memory. Enter Sirius.</p>
 
     <div class="centered button-wrapper">
-      <a class="white button icon-download" href="https://github.com/Comcast/sirius/zipball/master">Download Sirius</a>
+      <a class="white button icon-go" href="https://github.com/Comcast/sirius">View on GitHub</a>
       <a class="white button icon-go" href="#overview">Learn More</a>
     </div>
 
