Fixing spacing issues in second module

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Sirius by Comcast
   <hr/>
 
   <div class="clear">
-    <p class="headline-small">In short, Sirius gives you access to your reference data with arbitrary, native <br />data structures while handling the distributed system
+    <p class="headline-small">In short, Sirius gives you access to your reference data with arbitrary, native data structures while handling the distributed system
     heavy lifting for you.</p>
 
     <aside class="list-right">
